  * rubilicious.gemspec: increment version to 0.1.2

* Fri Oct 01 17:08:45 2004, pabs <pabs@pablotron.org>
  * release version 0.1.2

* Mon Oct 04 04:25:59 2004, pabs <pabs@pablotron.org>
  * rubilicious.rb: add HTTP proxy support (roughtly based on a patch
    from Guillaume Bisch <guillaume@bisch.org>
  * rubilicious.rb: added Rubilicious#use_proxy override (defaults to
    true), just in case people don't want to use the proxy

* Mon Nov 01 02:50:06 2004, pabs <pabs@pablotron.org>
  * rubilicious.rb: doc fix from josh lucas <josh@stonecottage.com>

* Sat Nov 27 12:58:28 2004, pabs <pabs@pablotron.org>
  * rubilicious.rb: change URI encoding to CGI::escape (suggested by
    James Britt)
  * rubilicious.rb: added Rubilicious#base_uri, to override the 
    base URI of API requests (the Delicious API documentation says that
    the URL could change at some point, so this will allow existing
    rubilicious installs to work without code muckery.  You can also set
    the RUBILICIOUS_BASE_URI environment variable (if it's not set, then
    Rubilicious#base_uri defaults to 'http://del.icio.us/api'

* Sat Nov 27 13:03:57 2004, pabs <pabs@pablotron.org>
  * README: updated the last updated date :D

* Fri Mar 11 02:53:17 2005, pabs <pabs@pablotron.org>
  * rubilicious.rb: applied #delete patch from Nobuhiro IMAI
    <nov@yo.rim.or.jp>                                                
  * rubilicious.rb: use built-in delicious add method
  * rubilicious.rb: add support for #update
  * rubilicious.rb: add mandatory 1-second delay between calls (as per
    the API documentation's request)

* Fri Mar 11 02:58:10 2005, pabs <pabs@pablotron.org>
  * README: update version to 0.1.4
  * rubilicious.gemspec: ditto

* Fri Mar 11 02:59:50 2005, pabs <pabs@pablotron.org>
  * releasing 0.1.4

* Sun May 29 19:31:03 2005, pabs <pabs@pablotron.org>
  * README: add note about bugs.p.o
  * README: increment versoin to 0.1.5
  * rubilicious.rb: ditto
  * rubilicious.gemspec: ditto